api: add number of bytes sent and received from/to RTSP sessions and RTSP connections
